force-app/main/default/objects/ApprovalProcessControlRGU__c/ApprovalProcessControlRGU__c.object-meta.xml
<CustomObject>
    <label>Control de aprobación referencia</label>
    <nameField>
        <displayFormat>APC{00000000}</displayFormat>
        <label>Control de aprobación (Referencia Elara)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Control de aprobación referencias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>