force-app/main/default/objects/ApprovalProcessControlRGU__c/fields/ApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>ApprovalProcess__c</fullName>
    <label>Proceso de aprobación</label>
    <referenceTo>ApprovalProcess__c</referenceTo>
    <relationshipLabel>Controles de aprobación (Referencia Elara)</relationshipLabel>
    <relationshipName>AprovalProcessControlsReference</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>