force-app/main/default/objects/ApprovalProcessControlRGU__c/fields/NewRGU__c.field-meta.xml
<CustomField>
    <fullName>NewRGU__c</fullName>
    <label>Por aprobar</label>
    <referenceTo>RGU__c</referenceTo>
    <relationshipLabel>Controles de aprobación (Por aprobar)</relationshipLabel>
    <relationshipName>ApprovalProcessControlsNewReference</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>