force-app/main/default/objects/ApprovalProcessControlRGU__c/fields/OldRGU__c.field-meta.xml
<CustomField>
    <fullName>OldRGU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original</label>
    <referenceTo>RGU__c</referenceTo>
    <relationshipLabel>Controles de aprobación (Original)</relationshipLabel>
    <relationshipName>ApprovalProcessControlOldReference</relationshipName>
    <type>Lookup</type>
</CustomField>