force-app/main/default/objects/ApprovalProcessControlRGU__c/fields/Original__c.field-meta.xml
<CustomField>
    <fullName>Original__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original</label>
    <referenceTo>RGU__c</referenceTo>
    <relationshipLabel>Controles de aprobación (Por aprobar)</relationshipLabel>
    <relationshipName>ApprovalProcessControlsNewReference</relationshipName>
    <type>Lookup</type>
</CustomField>